--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-tagsinput": "^0.7.6",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
