--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.395.0",
+    "@aws-sdk/client-s3": "^3.421.0",
     "@aws-sdk/client-transcribe": "^3.388.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,11 +18,11 @@
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.0",
     "react-bootstrap-tagsinput": "^0.7.6",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
