--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
+    "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-bootstrap-tagsinput": "^0.7.6",
