--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_SSH_KEY }}
-        source: "build/*"
+        # source: "build/*"
         target: "/var/www/html/decipher-frontend/"
     - name: Restart web server
       uses: appleboy/ssh-action@master
