--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,11 +24,13 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+    - name: List build directory contents
+      run: ls -al build
     - name: Deploy Build Artifacts to EC2
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_SSH_KEY }}
-        source: "build/*"
+        source: "${{ github.workspace }}/build/*"
         target: "/var/www/html/decipher-frontend/"
