--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
+    "cypress": "^13.6.6",
     "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
