--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -36,7 +36,8 @@ jobs:
         wait-on: 'http://localhost:3000'
         wait-on-timeout: 60
         record: true
-        record-key: ${{ secrets.CYPRESS_RECORD_KEY }} //test
+        # record-key: ${{ secrets.CYPRESS_RECORD_KEY }} //test
+        record-key: '2bf1f509-9091-4dac-89f4-d5c512bfa2f6'
       # Runs Cypress tests. 
       # 'wait-on-timeout' specified how many seconds to wait until localhost becomes available
       # record-key value is provided by Cypress cloud. This key is used to record tests through videos and screenshots and make them viewable on our Cypress cloud account.
