commented out chrome browser

--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
       with:
         start: npm start
-        browser: chrome
+        # browser: chrome
         wait-on: 'http://localhost:3000'
         wait-on-timeout: 60
         record: true
