--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap-tagsinput": "^0.7.6",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
