--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
