--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -3,10 +3,11 @@ name: Test, Build, and Deploy to EC2
 on:
   push:
     branches:
-      - '**'
+      - main
   pull_request:
     branches:
-      - '**'
+      - main
+    types: [closed]
 
 jobs:
   test:
